text align resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,8 @@ section
     position: relative;
 }
 
+p{
+    text-align: justify;
+    text-justify: inter-character;
+}
+
